# omen-k0000-fan-controller

./: .gitignore  LICENSE  MANIFEST.in  PKGBUILD  README_user_scheduler.md  hendricks_user_scheduler.py  omen_8a4d_user_scheduler.py  omen_k0000_fan_controller.py  pyproject.toml
docs/: hp-wmi-ir.md
src/hendricks_user_scheduler/: __init__.py  cli.py
src/omen_8a4d_user_scheduler/: __init__.py  cli.py
src/omen_8a4d_user_scheduler/data/: Hendricks_N20E.json
src/omen_k0000_fan_controller/: __init__.py  cli.py
systemd/: hendricks-user-scheduler.service  omen-8a4d-user-scheduler.service  omen-k0000-fan-controller.service
