[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omen-8a4d-user-scheduler"
version = "0.1.0"
description = "暗影精灵8A4D用户调度器"
readme = "README_user_scheduler.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "暗影精灵8A4D用户调度器 contributors" }]
keywords = ["hp", "omen", "victus", "fan", "hwmon", "hp-wmi", "8a4d"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Hardware",
]

[project.scripts]
omen-8a4d-user-scheduler = "omen_8a4d_user_scheduler.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omen_8a4d_user_scheduler = ["data/*.json"]
