[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omen-k0000-fan-controller"
version = "0.1.0"
description = "omen-k0000-fan-controller"
readme = "README_user_scheduler.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "omen-k0000-fan-controller contributors" }]
keywords = ["hp", "omen", "victus", "fan", "hwmon", "hp-wmi", "8a4d"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Hardware",
]

[project.scripts]
omen-k0000-fan-controller = "omen_k0000_fan_controller.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omen_k0000_fan_controller = ["data/*.json"]
